corrected nav option alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,8 +12,9 @@ body {
     background-color: #2b2b2b;
     width: auto;
     max-height: 3rem;
-    padding: 0.5rem 10rem 1rem;
+    padding: 0.5rem 0rem 1rem;
     display: flex;
+    justify-content: center;
     width: 100%;
     position: fixed;
 }
